--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "db:seed": "node --import tsx --env-file=.env prisma/seed.cts"
+    "db:seed": "node --import tsx prisma/seed.cts"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.3.0",
