feat: change .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,13 @@
-DATABASE_URL=
+# Base de datos
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_PORT=
 
-NEXTAUTH_SECRET=supersecreto123
+# App
+APP_PORT=3000
 NODE_ENV=production
+NEXTAUTH_SECRET=supersecreto123
+
+# Prisma
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
