chore: update Dockerfile and docker-compose configuration

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,9 @@
-# Base de datos
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_PORT=
+POSTGRES_USER=your_user
+POSTGRES_PASSWORD=your_password
+POSTGRES_DB=your_database
+POSTGRES_PORT=5432
 
-# App
-APP_PORT=3000
-NODE_ENV=production
-NEXTAUTH_SECRET=supersecreto123
+DATABASE_URL=postgresql://your_user:your_password@db:5432/your_database
 
-# Prisma
-DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:${POSTGRES_PORT}/${POSTGRES_DB}
+NEXTAUTH_SECRET=your_secret
+NODE_ENV=production/development
