refactor: migrar a Prisma 7 y optimizar Docker config
- Actualizar schema.prisma para Prisma 7 (remover url y previewFeatures)
- Actualizar prisma client config con adapter pg
- Completar seed con datos institucionales de niveles de equipos
- Optimizar Dockerfile con multi-stage build
- Separar docker-compose para dev/prod
- Agregar healthcheck endpoint
- Actualizar configuración Next.js (standalone output)
- Agregar scripts npm para Docker y DB management
- Documentación completa (README, checklists)

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,16 @@
-POSTGRES_USER=your_user
-POSTGRES_PASSWORD=your_password
-POSTGRES_DB=your_database
+# Database Configuration
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=asignacion_equipos_computo
 POSTGRES_PORT=5432
 
-DATABASE_URL=postgresql://your_user:your_password@db:5432/your_database
+# Database URL (usado por Prisma)
+# Formato: postgresql://[usuario]:[contraseña]@[host]:[puerto]/[database]
+DATABASE_URL=postgresql://postgres:your_secure_password_here@db:5432/asignacion_equipos_computo
 
-NEXTAUTH_SECRET=your_secret
-NODE_ENV=production/development
+# NextAuth Configuration
+NEXTAUTH_SECRET=your_super_secret_key_min_32_characters
+NEXTAUTH_URL=http://localhost:3000
+
+# Node Environment
+NODE_ENV=production
