--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,51 @@
+# Dependencies
 node_modules
+npm-debug.log
+yarn-error.log
+
+# Next.js
 .next
-.env
+out
+build
+
+# Environment files
+.env.local
+.env.development
+.env.test
+.env*.local
+
+# Git
 .git
+.gitignore
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Docker
+Dockerfile
+docker-compose*.yml
+.dockerignore
+
+# Documentation
+README.md
+docs/
+*.md
+
+# Testing
+coverage
+.nyc_output
+*.test.js
+*.spec.js
+
+# Misc
+.cache
+temp
+tmp
