--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,56 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules
+.pnp
+.pnp.js
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
+# Testing
+coverage
 
-# testing
-/coverage
+# Next.js
+.next/
+out/
+build
+dist
 
-# next.js
-/.next/
-/out/
+# Production
+build
 
-# production
-/build
-
-# misc
+# Misc
 .DS_Store
 *.pem
 
-# debug
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
-!.env.example
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env*.local
 
-# vercel
+# Vercel
 .vercel
 
-# typescript
+# Typescript
 *.tsbuildinfo
-next-env.d.ts
 
-/src/generated/prisma
+# IDEs
+.vscode
+.idea
+*.swp
+*.swo
+*~
+
+# Database
+*.db
+*.db-journal
+
+# Docker
+.dockerignore
+
+# OS
+Thumbs.db
